# fpstreams

./: .gitignore  404.html  MANIFEST.in  README.md  benchmark.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml  test.yml
docs/: index.md  roadmap.md
docs/reference/: collectors.md  option.md  parallel.md  result.md  stream.md
fpstreams/docs/: index.md  roadmap.md
fpstreams/docs/reference/: async_stream.md  functional.md  stream.md
reference/async_stream/: index.html
reference/collectors/: index.html
reference/functional/: index.html
reference/option/: index.html
reference/parallel/: index.html
reference/result/: index.html
reference/stream/: index.html
roadmap/: index.html
rust/: Cargo.toml
rust/src/: lib.rs  list_ops.rs
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/reference/option/: index.html
site/reference/result/: index.html
site/search/: search_index.json
src/fpstreams/: __init__.py  collectors.py  exceptions.py  functional.py  option.py  result.py  rust_ops.py
src/fpstreams/core/: async_ops.py  async_stream.py  collectors.py  common.py  ops.py  parallel.py  sequential.py  stream_interface.py
src/pyflow/: __init__.py  collectors.py  functional.py  stream.py
tests/: test_async_stream.py  test_collectors.py  test_functional.py  test_io.py  test_option.py  test_options.py  test_parallel.py  test_property_based.py  test_result.py  test_rust_ops.py  test_sources.py  test_stats.py  test_stream.py  test_terminals.py  test_transformations.py  test_v0_3_features.py  test_v0_6_0.py  test_v1_0_0.py
