[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpstreams"
version = "0.4.0"
description = "A functional programming library for Python mimicking Java Streams and JS Arrays."
readme = "README.md"
authors = [
  { name = "Steven Yang", email = "stevenyang0316@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.10" # Leveraging new union types (X | Y)

[project.urls]
"Homepage" = "https://github.com/steventimes/fpstreams"
"Bug Tracker" = "https://github.com/steventimes/fpstreams/issues"

[tool.mypy]
strict = true